fix ui spacing, image loading...

--- a/assets/css/seminario.css
+++ b/assets/css/seminario.css
@@ -42,6 +42,10 @@
     }
 */
 
+    .button {
+      padding: 0 1.5em !important;
+    }
+
     .lg-video-cont {
       margin-bottom: 80px;
     }
